# Offseason-Vision-2019

./: CMakeCache.txt  CMakeLists.txt  Config.cpp  Contour.cpp  Makefile  NewVision  README.md  Setting.cpp  UDPHandler.cpp  cmake_install.cmake  config  main.cpp  run.sh  vision-client.bat  vision-client.sh
include/: Config.hpp  Contour.hpp  Setting.hpp  Thread.hpp  UDPHandler.hpp
include/http/server/: connection.hpp  reply.hpp  request_handler.hpp
include/opencv-code/: precomp.hpp
opencv-code/: cap_gstreamer.cpp
resources/: config.yaml
src/: Config.cpp  Contour.cpp  Setting.cpp  Thread.cpp  UDPHandler.cpp  main.cpp
src/include/: Config.hpp  Contour.hpp  Setting.hpp  Thread.hpp  UDPHandler.hpp
